@@ -1,3 +1,6 @@
 Open Mod UI > Tools and click History for full change details:
 
 - allowed gambits to use highest of str, dex or int on saving difficult ability
+- changed Shadow Blade spell to only grant advantage if target is not on bright light
+- fixed Crusader's Mantle spell preventing hero movement or input
+- fixed Patron Soulblade's hex to also trigger on magical attacks
